2011-07-16  Daniel Bates  <dbates@webkit.org>

Attempt to fix the Qt Linux Release build after changeset <http://trac.webkit.org/changeset/91097>
        (https://bugs.webkit.org/show_bug.cgi?id=64615).

        * UIProcess/qt/QtWebPageProxy.cpp:
        (QtWebPageProxy::setCursorHiddenUntilMouseMoves): Added stub method.
        * UIProcess/qt/QtWebPageProxy.h:


Canonical link: https://commits.webkit.org/80410@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91159 268f45cc-cd09-0410-ab3c-d52691b4dbfc